backup1/jenkins-service-ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-service-ingess
spec:
  selector:
    app: jenkins
  ports:
    - port: 80
