backup1/tomcat-service-ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service-ingess
spec:
  selector:
    app: tomcat
  ports:
    - port: 80
